# uxhi-web

./: .gitignore  .mcp.json  CLAUDE.md  COMPONENT-REFACTOR-PLAN.md  capture.sh  member-directory-workplan.md  netlify.toml  prompt.txt  text-sm-usage.md
.playwright-mcp/: page-2026-05-07T07-44-01-683Z.yml  page-2026-05-07T07-54-36-710Z.yml  page-2026-05-07T07-54-59-438Z.yml  page-2026-05-07T07-55-33-365Z.yml  page-2026-05-07T07-56-10-307Z.yml  page-2026-05-07T07-56-36-415Z.yml  page-2026-05-07T07-57-31-197Z.yml  page-2026-05-07T07-58-23-482Z.yml  page-2026-05-07T07-59-09-144Z.yml  page-2026-05-07T07-59-34-787Z.yml  page-2026-05-07T07-59-52-625Z.yml  page-2026-05-07T08-02-05-596Z.yml  page-2026-05-07T08-04-52-015Z.yml  page-2026-05-07T08-05-39-705Z.yml  page-2026-05-08T05-50-34-954Z.yml  page-2026-05-10T01-08-18-321Z.yml
docs/: DESIGN-SYSTEM-PLAN.md  ICON-AUDIT.md  accessibility-audit.md  behold-instagram-feed-setup.md  handoff-guide.md  luma-events-integration-options.md  mailchimp-integration.md  netlify-migration-plan.md  sanity-content-audit.md  sanity-migration-note.md  stripe-payment-options.md  text-style-inconsistencies.md
web/: netlify.toml  next.config.ts  package-lock.json  package.json  sanity.cli.ts  sanity.config.ts  schema.json
web/docs/: FORMATTING.md  framer-to-static-conversion.md
web/scripts/: add-testimonials.mjs  migrate-partner-sponsor.mjs  seed-sanity.mjs
web/scripts/scrape-conference/: extract_popovers.py  extract_popovers_2025.py  pyproject.toml  scraper.py  scraper_simple.py
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx
(+186 files in other folders)
