[project]
name = "scrape-conference"
version = "0.1.0"
description = "Scrape Framer-hosted conference websites for static serving"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=5.0.0",
]

[tool.uv]
dev-dependencies = []
